--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "joi": "^17.10.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
-    "morgan": "1.10.0"
+    "morgan": "1.10.0",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.6.0",
@@ -32,6 +33,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.10",
+    "@types/validator": "^13.11.8",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
     "eslint": "^8.56.0",
