--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.0.0",
     "cors": "2.8.5",
     "dotenv": "^16.3.1",
     "express": "4.17.1",
@@ -22,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
     "morgan": "1.10.0",
+    "multer": "^1.4.5-lts.1",
     "swagger-ui-express": "^5.0.0",
     "validator": "^13.11.0"
   },
@@ -33,6 +35,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.11.10",
     "@types/swagger-ui-express": "^4.1.6",
     "@types/validator": "^13.11.8",
