--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^7.5.0",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.9",
     "swagger-ui-express": "^5.0.0",
     "validator": "^13.11.0"
   },
@@ -37,6 +38,7 @@
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.11.10",
+    "@types/nodemailer": "^6.4.14",
     "@types/swagger-ui-express": "^4.1.6",
     "@types/validator": "^13.11.8",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
