--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "2.8.5",
     "dotenv": "^16.3.1",
     "express": "4.17.1",
+    "express-joi-validation": "^5.0.1",
     "http-errors": "^2.0.0",
     "joi": "^17.10.1",
     "jsonwebtoken": "^9.0.2",
@@ -25,6 +26,7 @@
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.9",
+    "normalize-mongoose": "^1.0.0",
     "swagger-ui-express": "^5.0.0",
     "validator": "^13.11.0"
   },
@@ -49,6 +51,6 @@
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.5"
   }
 }
