--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.3.1",
     "express": "4.17.1",
     "express-joi-validation": "^5.0.1",
+    "google-auth-library": "^9.10.0",
     "http-errors": "^2.0.0",
     "joi": "^17.10.1",
     "jsonwebtoken": "^9.0.2",
