--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "dotenv": "^16.3.1",
     "express": "4.17.1",
     "express-joi-validation": "^5.0.1",
-    "google-auth-library": "^9.10.0",
     "http-errors": "^2.0.0",
     "joi": "^17.10.1",
     "jsonwebtoken": "^9.0.2",
@@ -38,6 +37,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/jwt-decode": "^3.1.0",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.11.10",
