fix: massive updates

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-DB_HOST=
-JWT_SECRET=
-CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
+CLOUDINARY_CLOUD_NAME=
+DB_HOST=
+PORT=
+JWT_SECRET=
 SEND_EMAIL_FROM=
-SENDER_PASSWORD=
 SEND_EMAIL_TO=
