fix: update controllers, add new example env

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,11 @@ CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 CLOUDINARY_CLOUD_NAME=
 DB_HOST=
+ALLOWED_ORIGINS=
 PORT=
 JWT_SECRET=
-SEND_EMAIL_FROM=
-SEND_EMAIL_TO=
+EMAIL_PORT=
+EMAIL_HOST=
+EMAIL_USER=
+EMAIL_RECEIVER=
+EMAIL_PASSWORD=
