--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start": "ts-node -r tsconfig-paths/register app/server.ts",
     "dev": "ts-node-dev -r tsconfig-paths/register --files --quiet app/server.ts",
     "lint": "eslint --fix app/**/*.ts",
+    "format": "prettier --write ./app",
+    "format:check": "prettier --check ./app",
     "prepare": "husky"
   },
   "dependencies": {
@@ -31,6 +33,7 @@
   "devDependencies": {
     "@commitlint/cli": "^18.6.0",
     "@commitlint/config-conventional": "^18.6.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
@@ -45,8 +48,10 @@
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
     "eslint": "^8.56.0",
+    "eslint-formatter-mo": "^1.2.0",
     "husky": "^9.0.6",
     "lint-staged": "^15.2.7",
+    "prettier": "^3.3.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsc-files": "^1.1.4",
