--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "4.17.1",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^7.5.0",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
