--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,5 @@
     "strict": true,
     "resolveJsonModule": true
   },
-  "include": ["./app/**/*"],
-  "files": ["declarations.d.ts"]
+  "include": ["./app/**/*"]
 }
