chore: fix build error with session typings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,6 @@
     "strict": true,
     "resolveJsonModule": true
   },
-  "include": ["./app/**/*"]
+  "include": ["./app/**/*"],
+  "files": ["./app/typings/express.d.ts"]
 }
