feat: add env variables for tokens expiration

--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,5 @@ EMAIL_HOST=
 EMAIL_USER=
 EMAIL_RECEIVER=
 EMAIL_PASSWORD=
-ACESS_TOKEN_EXPIRES_IN=
+ACCESS_TOKEN_EXPIRES_IN=
 REFRESH_TOKEN_EXPIRES_IN=
