--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,8 @@ CLOUDINARY_CLOUD_NAME=
 DB_HOST=
 ALLOWED_ORIGINS=
 PORT=
-JWT_SECRET=
+ACCESS_JWT_SECRET=
+REFRESH_JWT_SECRET=
 EMAIL_PORT=
 EMAIL_HOST=
 EMAIL_USER=
