--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 CLOUDINARY_CLOUD_NAME=
-DB_HOST=
+DATABASE_URL=
 ALLOWED_ORIGINS=
 PORT=
 ACCESS_JWT_SECRET=
