--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@ CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 CLOUDINARY_CLOUD_NAME=
 DATABASE_URL=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 ALLOWED_ORIGINS=
 PORT=
 API_PREFIX=
