--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "nodemailer": "^6.9.9",
     "swagger-ui-express": "^5.0.0",
     "validator": "^13.11.0",
-    "zod": "^3.23.8",
-    "zod-express-middleware": "^1.4.0"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.6.0",
