--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "node": ">16.17.1"
   },
   "scripts": {
-    "start": "ts-node -r tsconfig-paths/register app/app.ts",
-    "dev": "ts-node-dev -r tsconfig-paths/register --files --quiet app/app.ts",
+    "start": "ts-node -r tsconfig-paths/register app/server.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register --files --quiet app/server.ts",
     "lint": "eslint --fix app/**/*.ts",
     "format": "prettier --write ./app",
     "format:check": "prettier --check ./app",
