--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,8 +1,3 @@
 {
-  "*.{ts,tsx}": [
-    "prettier --write",
-    "eslint --fix -f mo",
-    "eslint -f mo",
-    "tsc-files --noEmit ./app/typings/express.d.ts"
-  ]
+  "*.{ts,tsx}": ["prettier --write", "eslint --fix -f mo", "eslint -f mo"]
 }
