chore: set up alias

--- a/.prettierrc
+++ b/.prettierrc
@@ -16,13 +16,11 @@
     "^(express)(/.*)?$",
     "<THIRD_PARTY_MODULES>",
     "",
-    "^controllers(/.*)?$",
+    "^@/controllers(/.*)?$",
     "",
-    "^models(/.*)?$",
+    "^@/(middlewares|config|data)(/.*)?$",
     "",
-    "^middlewares(/.*)?$",
-    "",
-    "^(utils|constants|schemas)(/.*)?$",
+    "^@/(utils|constants|schemas)(/.*)?$",
     "",
     "^[.]"
   ],
