fix: add typeRoots to tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "paths": {
       "@/*": ["./app/*"],
       "@prisma": ["./prisma/prisma.client.ts"]
-    }
+    },
+    "typeRoots": ["./app/types", "./node_modules/@types"]
   },
   "include": ["./app/**/*"]
 }
