--- a/package.json
+++ b/package.json
@@ -14,46 +14,47 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@prisma/client": "^5.22.0",
+    "@prisma/client": "^6.4.0",
     "bcrypt": "^5.1.1",
-    "cloudinary": "^2.0.0",
+    "cloudinary": "^2.5.1",
     "cors": "2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "4.17.1",
-    "google-auth-library": "^9.15.0",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "google-auth-library": "^9.15.1",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.9",
+    "nodemailer": "^6.10.0",
     "swagger-ui-express": "^5.0.0",
-    "zod": "^3.23.8"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.6.0",
-    "@commitlint/config-conventional": "^18.6.0",
-    "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
+    "@commitlint/cli": "^19.7.1",
+    "@commitlint/config-conventional": "^19.7.1",
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
+    "@types/express": "4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
-    "@types/multer": "^1.4.11",
-    "@types/node": "^20.11.10",
-    "@types/nodemailer": "^6.4.14",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^22.13.4",
+    "@types/nodemailer": "^6.4.17",
     "@types/swagger-ui-express": "^4.1.6",
-    "@types/validator": "^13.11.8",
-    "@typescript-eslint/eslint-plugin": "^6.20.0",
-    "@typescript-eslint/parser": "^6.20.0",
-    "eslint": "^8.56.0",
-    "eslint-formatter-mo": "^1.2.0",
-    "husky": "^9.0.6",
-    "lint-staged": "^15.2.7",
-    "prettier": "^3.3.2",
-    "prisma": "^5.22.0",
+    "@types/validator": "^13.12.2",
+    "@typescript-eslint/parser": "^8.24.1",
+    "eslint": "^9.20.1",
+    "eslint-formatter-mo": "^2.2.0",
+    "husky": "^9.1.7",
+    "jiti": "^2.4.2",
+    "lint-staged": "^15.4.3",
+    "prettier": "^3.5.1",
+    "prisma": "^6.4.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.24.1"
   }
 }
