--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/validator": "^13.12.2",
     "eslint": "^9.20.1",
     "eslint-formatter-mo": "^2.2.0",
+    "globals": "^15.15.0",
     "husky": "^9.1.7",
     "jiti": "^2.4.2",
     "lint-staged": "^15.4.3",
