--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,7 @@
     "paths": {
       "@/*": ["./app/*"],
       "@prisma": ["./prisma/prisma.client.ts"]
-    },
-    "typeRoots": ["./app/types", "./node_modules/@types"]
+    }
   },
-  "include": ["./app/**/*"]
+  "include": ["app"]
 }
