--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,10 +8,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "resolveJsonModule": true,
-    "paths": {
-      "@/*": ["./app/*"],
-      "@prisma": ["./prisma/prisma.client.ts"]
-    }
+    "paths": { "@/*": ["./app/*"] }
   },
   "include": ["app"]
 }
