--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "4.17.21",
-    "@types/jsonwebtoken": "^9.0.9",
+    "@types/jsonwebtoken": "9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.9",
