fix: update libraries, configure jose for tokens handling

--- a/.env.example
+++ b/.env.example
@@ -8,10 +8,12 @@ PORT=
 API_PREFIX=
 ACCESS_JWT_SECRET=
 REFRESH_JWT_SECRET=
+ACCESS_JWT_EXPIRES_IN=
+REFRESH_JWT_EXPIRES_IN=
+ACCESS_JWT_ALGORITHM=
+REFRESH_JWT_ALGORITHM=
 EMAIL_PORT=
 EMAIL_HOST=
 EMAIL_USER=
 EMAIL_RECEIVER=
 EMAIL_PASSWORD=
-ACCESS_TOKEN_EXPIRES_IN=
-REFRESH_TOKEN_EXPIRES_IN=
