--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
-    "bcrypt": "^5.1.1",
+    "argon2": "^0.41.1",
     "cloudinary": "^2.6.0",
     "cors": "2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "google-auth-library": "^9.15.1",
     "http-errors": "^2.0.0",
-    "jsonwebtoken": "^9.0.2",
+    "jose": "^6.0.10",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
@@ -33,10 +33,8 @@
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
-    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "4.17.21",
-    "@types/jsonwebtoken": "9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.10",
