chore: add tsc-files to check type errors in lint-staged

--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,3 +1,8 @@
 {
-  "*.{ts,tsx}": ["prettier --write", "eslint --fix -f mo", "eslint -f mo"]
+  "*.{ts,tsx}": [
+    "prettier --write",
+    "eslint --fix -f mo",
+    "eslint -f mo",
+    "tsc-files --noEmit"
+  ]
 }
