--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "@types/node": "^22.13.13",
     "@types/nodemailer": "^6.4.17",
     "@types/swagger-ui-express": "^4.1.6",
-    "@types/validator": "^13.12.2",
     "eslint": "^9.23.0",
     "eslint-formatter-mo": "^2.3.0",
     "globals": "^16.0.0",
@@ -51,6 +50,7 @@
     "prisma": "^6.5.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
+    "tsc-files": "^1.1.4",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.28.0"
