--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "engines": {
-    "node": ">16.17.1"
+    "node": ">=20.18"
   },
   "scripts": {
     "start": "ts-node -r tsconfig-paths/register --files app/server.ts",
@@ -15,44 +15,44 @@
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
-    "argon2": "^0.41.1",
-    "cloudinary": "^2.6.0",
+    "argon2": "^0.43.0",
+    "cloudinary": "^2.6.1",
     "cors": "2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "google-auth-library": "^9.15.1",
     "http-errors": "^2.0.0",
-    "jose": "^6.0.10",
+    "jose": "^6.0.11",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.2",
-    "nodemailer": "^6.10.0",
+    "nodemailer": "^7.0.3",
     "swagger-ui-express": "^5.0.1",
-    "zod": "^3.24.2"
+    "zod": "^3.24.4"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.8.0",
-    "@commitlint/config-conventional": "^19.8.0",
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
-    "@types/cors": "^2.8.17",
+    "@types/cors": "^2.8.18",
     "@types/express": "5.0.1",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
-    "@types/node": "^22.13.16",
+    "@types/node": "^22.15.17",
     "@types/nodemailer": "^6.4.17",
     "@types/swagger-ui-express": "^4.1.8",
-    "eslint": "^9.23.0",
+    "eslint": "^9.26.0",
     "eslint-formatter-mo": "^2.3.0",
-    "globals": "^16.0.0",
+    "globals": "^16.1.0",
     "husky": "^9.1.7",
     "jiti": "^2.4.2",
-    "lint-staged": "^15.5.0",
+    "lint-staged": "^16.0.0",
     "prettier": "^3.5.3",
     "prisma": "^6.5.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsc-files": "^1.1.4",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.8.2",
-    "typescript-eslint": "^8.29.0"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.32.0"
   }
 }
