--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "format:check": "prettier --check ./app",
     "prepare": "husky"
   },
+  "prisma": {
+    "schema": "./prisma"
+  },
   "dependencies": {
-    "@prisma/client": "^6.5.0",
+    "@prisma/client": "^6.8.2",
     "argon2": "^0.43.0",
     "cloudinary": "^2.6.1",
     "cors": "2.8.5",
@@ -24,30 +27,30 @@
     "http-errors": "^2.0.0",
     "jose": "^6.0.11",
     "morgan": "1.10.0",
-    "multer": "^1.4.5-lts.2",
+    "multer": "^2.0.0",
     "nodemailer": "^7.0.3",
     "swagger-ui-express": "^5.0.1",
-    "zod": "^3.24.4"
+    "zod": "^3.25.30"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
     "@types/cors": "^2.8.18",
-    "@types/express": "5.0.1",
+    "@types/express": "5.0.2",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
-    "@types/node": "^22.15.17",
+    "@types/node": "^22.15.21",
     "@types/nodemailer": "^6.4.17",
     "@types/swagger-ui-express": "^4.1.8",
-    "eslint": "^9.26.0",
+    "eslint": "^9.27.0",
     "eslint-formatter-mo": "^2.3.0",
-    "globals": "^16.1.0",
+    "globals": "^16.2.0",
     "husky": "^9.1.7",
     "jiti": "^2.4.2",
     "lint-staged": "^16.0.0",
     "prettier": "^3.5.3",
-    "prisma": "^6.5.0",
+    "prisma": "^6.8.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsc-files": "^1.1.4",
