fix: minor updates & improvements

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,8 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 PORT=
 API_PREFIX=
+NODE_ENV=
+ALLOWED_ORIGINS=
 ACCESS_JWT_SECRET=
 REFRESH_JWT_SECRET=
 ACCESS_JWT_EXPIRES_IN=
