--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,21 @@
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 CLOUDINARY_CLOUD_NAME=
-DATABASE_URL=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 PORT=
 API_PREFIX=
 NODE_ENV=
 ALLOWED_ORIGINS=
-ACCESS_JWT_SECRET=
-REFRESH_JWT_SECRET=
-ACCESS_JWT_EXPIRES_IN=
-REFRESH_JWT_EXPIRES_IN=
-ACCESS_JWT_ALGORITHM=
-REFRESH_JWT_ALGORITHM=
-EMAIL_PORT=
+DATABASE_URL=
+SESSION_STORE_CHECK_PERIOD_MS=
+COOKIE_SECRET=
+COOKIE_SECURE=
+COOKIE_DOMAIN=
+COOKIE_SAME_SITE=
+COOKIE_MAX_AGE=
 EMAIL_HOST=
-EMAIL_USER=
-EMAIL_RECEIVER=
 EMAIL_PASSWORD=
+EMAIL_PORT=
+EMAIL_RECEIVER=
+EMAIL_USER=
