--- a/package.json
+++ b/package.json
@@ -18,19 +18,23 @@
   },
   "dependencies": {
     "@prisma/client": "^6.11.1",
+    "@quixo3/prisma-session-store": "^3.1.13",
     "argon2": "^0.43.0",
+    "bson-objectid": "^2.0.4",
     "cloudinary": "^2.7.0",
     "cors": "2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
-    "google-auth-library": "^10.1.0",
+    "express-session": "^1.18.2",
     "http-errors": "^2.0.0",
-    "jose": "^6.0.11",
     "morgan": "1.10.0",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.4",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "swagger-ui-express": "^5.0.1",
-    "zod": "^3.25.74"
+    "zod": "3.25.74",
+    "zod-express-middleware": "^1.4.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
@@ -38,10 +42,13 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
     "@types/cors": "^2.8.19",
     "@types/express": "5.0.3",
+    "@types/express-session": "^1.18.2",
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.0.10",
     "@types/nodemailer": "^6.4.17",
+    "@types/passport": "^1.0.17",
+    "@types/passport-local": "^1.0.38",
     "@types/swagger-ui-express": "^4.1.8",
     "eslint": "^9.30.1",
     "eslint-formatter-mo": "^2.3.0",
