feat: add redis

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,10 @@ API_PREFIX=
 NODE_ENV=
 ALLOWED_ORIGINS=
 DATABASE_URL=
+REDIS_USERNAME=
+REDIS_PASSWORD=
+REDIS_HOST=
+REDIS_PORT=
 SESSION_STORE_CHECK_PERIOD_MS=
 COOKIE_SECRET=
 COOKIE_SECURE=
