--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "http-errors": "^2.0.0",
+    "ioredis": "^5.6.1",
     "morgan": "1.10.0",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.4",
