chore: update prettier import order

--- a/.prettierrc
+++ b/.prettierrc
@@ -16,11 +16,13 @@
     "^(express)(/.*)?$",
     "<THIRD_PARTY_MODULES>",
     "",
-    "^@/controllers(/.*)?$",
+    "^@/(controllers|services)(/.*)?$",
     "",
-    "^@/(middlewares|config|data)(/.*)?$",
+    "^@/(prisma)(/.*)?$",
     "",
-    "^@/(utils|constants|schemas)(/.*)?$",
+    "^@/(middlewares|config|data|strategies)(/.*)?$",
+    "",
+    "^@/(utils|constants|schemas|types)(/.*)?$",
     "",
     "^[.]"
   ],
