feat(caching): add redis

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@ CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 CLOUDINARY_CLOUD_NAME=
 DATABASE_URL=
+REDIS_USERNAME=
+REDIS_PASSWORD=
+REDIS_HOST=
+REDIS_PORT=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 PORT=
