--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^5.1.0",
     "google-auth-library": "^10.1.0",
     "http-errors": "^2.0.0",
+    "ioredis": "^5.6.1",
     "jose": "^6.0.11",
     "morgan": "1.10.0",
     "multer": "^2.0.1",
