--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "multer": "^2.0.1",
     "nodemailer": "^7.0.4",
     "swagger-ui-express": "^5.0.1",
-    "zod": "^3.25.74"
+    "zod": "^3.25.74",
+    "zod-express-middleware": "^1.4.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
