--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "google-auth-library": "^10.1.0",
+    "helmet": "^8.1.0",
     "http-errors": "^2.0.0",
     "ioredis": "^5.6.1",
     "jose": "^6.0.11",
