--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.0.1",
     "google-auth-library": "^10.1.0",
     "helmet": "^8.1.0",
     "http-errors": "^2.0.0",
@@ -31,6 +32,7 @@
     "morgan": "1.10.0",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.4",
+    "rate-limit-redis": "^4.2.1",
     "swagger-ui-express": "^5.0.1",
     "zod": "^3.25.74",
     "zod-express-middleware": "^1.4.0"
