refactor: add server auth

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 CLOUDINARY_CLOUD_NAME=
 DATABASE_URL=
+FRONTEND_URL=
 REDIS_USERNAME=
 REDIS_PASSWORD=
 REDIS_HOST=
@@ -11,7 +12,12 @@ GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URI=
 PORT=
 API_PREFIX=
+NODE_ENV=
 ALLOWED_ORIGINS=
+COOKIE_HTTP_ONLY=
+COOKIE_SECURE=
+COOKIE_SAME_SITE=
+COOKIE_DOMAIN=
 ACCESS_JWT_SECRET=
 REFRESH_JWT_SECRET=
 ACCESS_JWT_EXPIRES_IN=
