--- a/package.json
+++ b/package.json
@@ -17,50 +17,47 @@
     "schema": "./prisma"
   },
   "dependencies": {
-    "@prisma/client": "^6.11.1",
-    "argon2": "^0.43.0",
+    "@prisma/client": "^6.13.0",
+    "argon2": "^0.44.0",
     "cloudinary": "^2.7.0",
     "cors": "2.8.5",
-    "dotenv": "^17.0.1",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "express-rate-limit": "^8.0.1",
-    "google-auth-library": "^10.1.0",
+    "google-auth-library": "^10.2.1",
     "helmet": "^8.1.0",
     "http-errors": "^2.0.0",
-    "ioredis": "^5.6.1",
-    "jose": "^6.0.11",
-    "morgan": "1.10.0",
-    "multer": "^2.0.1",
-    "nodemailer": "^7.0.4",
-    "rate-limit-redis": "^4.2.1",
+    "ioredis": "^5.7.0",
+    "jose": "^6.0.12",
+    "morgan": "1.10.1",
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.5",
     "swagger-ui-express": "^5.0.1",
-    "zod": "^3.25.74",
-    "zod-express-middleware": "^1.4.0"
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
-    "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
+    "@ianvs/prettier-plugin-sort-imports": "^4.6.1",
     "@types/cors": "^2.8.19",
     "@types/express": "5.0.3",
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
-    "@types/node": "^24.0.10",
+    "@types/node": "^24.2.1",
     "@types/nodemailer": "^6.4.17",
     "@types/swagger-ui-express": "^4.1.8",
-    "eslint": "^9.30.1",
+    "eslint": "^9.33.0",
     "eslint-formatter-mo": "^2.3.0",
     "globals": "^16.3.0",
     "husky": "^9.1.7",
-    "jiti": "^2.4.2",
-    "lint-staged": "^16.1.2",
+    "jiti": "^2.5.1",
+    "lint-staged": "^16.1.5",
     "prettier": "^3.6.2",
-    "prisma": "^6.11.1",
+    "prisma": "^6.13.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsc-files": "^1.1.4",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.35.1"
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.39.1"
   }
 }
